# whiteboard-opencv

./: .gitignore  CMakeLists.txt  build.nix  flake.nix
doc/: shear-matrix.m
src/: main.cpp  whiteboard.cpp  whiteboard.hpp
